# Spectra

./: .gitignore  CMakeLists.txt  README.md  windows-toolchain.cmake
.github/workflows/: cmake-sdl2-build.yml
SDL2/docs/: README-macos.md
SDL2/i686-w64-mingw32/include/SDL2/: SDL_mouse.h  SDL_opengl_glext.h  SDL_opengles2_gl2.h  SDL_rwops.h
SDL2/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_egl.h  SDL_filesystem.h  SDL_opengles2_gl2ext.h
cmake/modules/: readme.md
data/: level1.tmx  map.tmx  map1.tmx  map1_new.tmx  map2.tmx  states.xml
include/: AnimatedGraphic.h  Bullet.h  BulletHandler.h  Collision.h  CollisionManager.h  Enemy.h  FloatingEnemy.h  Game.h  GameObject.h  GameObjectFactory.h  GameOverState.h  GameState.h  GameStateManager.h  InputHandler.h  Layer.h  Level.h  LevelCompletedState.h  LevelParser.h  LoaderParams.h  MainMenuState.h  Map1Boss.h  MenuButton.h  MenuState.h  ObjectLayer.h  PauseState.h  PlayState.h  Player.h  SDLGameObject.h  ScrollingBackground.h  ShooterObject.h  SoundManager.h  StateParser.h  TextureManager.h  TileLayer.h  Turret.h  Vector.h  Vector2D.h  helper.h
include/Enemies/: FlyingEnemy.h  Map1Boss.h  Map2Boss.h
include/GameState/: GameOverState.h  GameState.h  GameStateManager.h  GuideScreen.h  MainMenuState.h  MenuState.h  PauseState.h  PlayState.h  StateParser.h  WinState.h
include/zlib/win32/: zlib1.rc
src/: AnimatedGraphic.cpp  BulletHandler.cpp  CollisionManager.cpp  Enemy.cpp  FloatingEnemy.cpp  FlyingEnemy.cpp  Game.cpp  GameObject.cpp  GameObjectFactory.cpp  GameOverState.cpp  GameStateManager.cpp  InputHandler.cpp  Level.cpp  LevelCompletedState.cpp  LevelParser.cpp  MainMenuState.cpp  Map1Boss.cpp  MenuButton.cpp  MenuState.cpp  ObjectLayer.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  SDLGameObject.cpp  ScrollingBackground.cpp  ShooterObject.cpp  SoundManager.cpp  StateParser.cpp  TextureManager.cpp  TileLayer.cpp  Turret.cpp  Vector.cpp  Vector2D.cpp  WinState.cpp  main.cpp
src/Enemies/: FloatingEnemy.cpp  FlyingEnemy.cpp  Map1Boss.cpp  Map2Boss.cpp  Turret.cpp
src/GameState/: GameOverState.cpp  GameStateManager.cpp  GuideScreen.cpp  LevelCompletedState.cpp  MainMenuState.cpp  PauseState.cpp  PlayState.cpp  WinState.cpp
zlib/: CMakeLists.txt
zlib/win32/: Makefile.gcc
